--- a/backend/.env_example
+++ b/backend/.env_example
@@ -1,9 +1,12 @@
-//MongoDB
+// MongoDB
 DB_USERNAME = 'xxxx' 
 DB_PASSWORD = 'xxxx' 
 DB_CLUSTER = 'clusterx.xxxxx'
 DB_NAME =  'xxxxx'
 
-//Authentification
-CRYPTOJS_KEY_EMAIL = 'mettre une clé forte'
+// Clés de cryptage
+CRYPTOJS_KEY_EMAIL = 'mettre une clé forte' 
+
 JWT_KEY = 'mettre une clé forte'
+
+SECRET_TOKEN = 'mettre une clé forte'
